# MemGraph

./: .gitignore  AGENTS.md  BOOKMARKLET.md  CODE_INTELLIGENCE.md  DEVELOPMENT.md  IDEA.md  IMPLEMENTATION.md  LICENSE  MEMORY.md  README.md  __init__.py  add_test_nodes.py  ai-wrapper.sh  debug_autolink.py  debug_bm25.py  debug_hybrid.py  debug_scores.py  debug_similarity.py  debug_tfidf.py  debug_tokens.py  demo.py  generate_antigravity_schemas.py  mem-mcp.py  mem.py  models.py  pyproject.toml  requirements.txt  server.py  setup.ps1  setup.sh  test_bm25_simple.py  uninstall.ps1  uninstall.sh
cli/: __init__.py  main.py
extensions/gemini/: GEMINI.md  gemini-extension.json
extensions/gemini/.opencode/plugins/: basemem.js
extensions/gemini/hooks/: session-start
extensions/gemini/references/: claude-tools.md  gemini-tools.md  opencode-tools.md
extensions/gemini/skills/using-basemem/: SKILL.md
graph/: __init__.py  engine.py
indexer/: __init__.py  indexer.py  parser.py  schema.py  watcher.py
mcp/: server.py
mcp_server/: __init__.py  server.py
orchestrator/: __init__.py  context.py
processing/: __init__.py  pipeline.py  summarizer.py  workers.py
retrieval/: __init__.py  bm25.py  engine.py  vector.py
storage/: __init__.py  db.py  sessions.py
tests/: test_basemem.py
visualization/: __init__.py  terminal.py
