[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "basemem"
version = "0.1.0"
description = "AI Knowledge Base System with Graph + Token-Optimized Memory Layer"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "BaseMem Contributors"}
]

dependencies = [
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8.0",
    "aiofiles>=23.2.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
]

[project.scripts]
kb = "basemem.cli.main:cli"

[project.optional-dependencies]
vector-db = [
    "faiss-cpu>=1.7.0",
]
qdrant = [
    "qdrant-client>=1.17.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
]
