[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "basemem"
version = "0.2.0"
description = "AI Knowledge Base System - Pure SQLite Zero-RAM Version"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "BaseMem Contributors"}
]

dependencies = [
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "aiofiles>=23.2.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "mcp>=1.0.0",
]

[project.scripts]
mem = "cli.main:cli"

[project.optional-dependencies]
# Heavy AI components (Optional)
ai = [
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "faiss-cpu>=1.7.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
]
